styles.css
@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: black;
    font-family: "Share Tech Mono", monospace;
}

.container {
    background-color: gray;
    width: 20%;
    padding: 2%;

    margin-left: auto;
    margin-right: auto;
    display: grid;
    place-items: center;
    align-items: center;
}

section {
    display: inline-block;
    width: 100%;
    margin: 5%;
}

p {
    font-size: 1.5em;
    display: inline;
    margin-left: 2%;
}

button {
    font-family: "Share Tech Mono", monospace;
    font-size: 1.5em;

    background-color: dimgray;
    border: transparent;
    border-radius: 10%;

    padding: 1%;
    width: fit-content;
}
button:hover {
    background-color: green;
}

